<resources>
    <string name="app_name">cheezery</string>
    <string name="welcome">Welcome to The Cheezery!</string>
    <string name="description">Home of the most wonderful desserts
        ever seen (and tested) by the human being.</string>
    <string name="button_start">Get started!</string>

    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="conditions">I have read and accept
        terms and conditions of the Cheezery</string>
    <string name="sign_in">Sign in</string>

    <string name="our_menu">Our menu</string>
    <string name="cold_drinks">Cold drinks </string>
    <string name="hot_drinks">Hot drinks</string>
    <string name="sweets">Sweets</string>
    <string name="salties">Salties</string>
    <string name="combos">Combos</string>
    <string name="custom">Custom</string>
</resources>