<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpleishGrey"
    tools:context=".MainActivity">

   <ImageView
       android:layout_width="match_parent"
       android:layout_height="461dp"
       android:src="@drawable/thecheezery"
       android:scaleType="fitXY"
       />

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textSize="24dp"
       android:layout_marginTop="25dp"
       android:textColor="@color/dusty_white"
       android:fontFamily="sans-serif-light"
       android:text="@string/welcome"
       android:textAlignment="center"

       />
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textSize="15dp"
       android:fontFamily="sans-serif-light"
       android:textStyle="italic"
       android:textColor="@color/dusty_white"
       android:text="@string/description"
       android:textAlignment="center"
       android:padding="15dp"
       />

   <Button
       android:id="@+id/buttonp"
       android:layout_width="219dp"
       android:layout_height="33dp"
       android:layout_gravity="center"
       android:layout_marginTop="20dp"
       android:background="@drawable/round_button"
       android:text="@string/button_start"
       android:textColor="@color/white" />

</LinearLayout>